New version of web file.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hello Coursera</title>
 </head>
 <body>
-    <h1>Hello Coursera Kritika!</h1>
+    <h1>Hello Coursera Kritika! iam very excited to do this assigment</h1>
 </body>
 </html>
